Fix BarLoader z-index
Fix

--- a/components/common/BarLoader/BarLoader.module.scss
+++ b/components/common/BarLoader/BarLoader.module.scss
@@ -5,7 +5,7 @@
     right: 0;
     text-align: center;
     top: 0;
-    z-index: 999;
+    z-index: 9999;
 
     > span {
         display: inherit;
